This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
7/23/24: Fixed crash aligning to grid map already loaded without pieces
aligned and fixed probable source of crash resuming multigrid; added autosave
of multigrid session file when there are unsaved changes.

7/16/24: Made OpenNewMontage clear out list of pieces to skip (In 4.1).

7/15/24: SEM_4-2-0beta10
7/15/24: SEM_4-1-14
7/15/24: Fixed bad problem with hybrid montaging, introduced 6/11 (In 4.1).

7/15/1: Fixed SetFolderForFrames to allow subdirectories for Falcon (In 4.1).

7/15/24: Allowed Aux lens to be changed via the C3 name in Hitachi (In 4.1).

7/10/24: Added ability to connect to two different JEOL camera servers.

7/10/24: Added property to control shift limit when reloaded grid is
realigned, and made it keep track of whether the grid on the stage has been
aligned to minimize operations.

7/9/24: Added option to have tilt axis offset set automatically with lateral
offset from fine eucentricity.

7/3/24: SEM_4-2-0beta9
6/30/24: Made Hole Finder give priority to polygons drawn on map being
analyzed (In 4.1).

6/29/24: More fixes to multiple grid acquisition, and major rearrangements and
renaming in the Multiple Grid Settings Manager dialog.

6/29/24: Marked Navigator table as changed after setting up files or tilt
series with Shift N or Shift T (In 4.1).

6/26/24: SEM_4-1-13
6/26/24: Fixed hole combining with hex grids, which was broken for scopes with
images having no handedness inversion on 12/9/23.  Also made initial IS
vectors stored in map by hole finder be correct if the "Use 1/3" option is set
when finding (In 4.1).

6/25/24: Added property to enable using the multiple grid operations with one
grid and no autoloader, fixed some more problems.
